--- a/ansible/roles/monitoring_server/templates/docker-compose.yml.j2
+++ b/ansible/roles/monitoring_server/templates/docker-compose.yml.j2
@@ -1,6 +1,6 @@
 services:
   prometheus:
-    image: quay.io/prometheus/prometheus:latest
+    image: prom/prometheus:latest
     container_name: prometheus
     network_mode: host
     volumes:
@@ -9,7 +9,7 @@ services:
     restart: unless-stopped
 
   node_exporter:
-    image: quay.io/prometheus/node-exporter:latest
+    image: prom/node-exporter:latest
     container_name: node_exporter
     network_mode: host
     pid: host
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
 
   grafana:
-    image: quay.io/grafana/grafana:latest
+    image: grafana/grafana:latest
     container_name: grafana
     network_mode: host
     user: "472"
