config: add ansible.cfg for roles_path, update prometheus.yml volume path in docker-compose template

--- a/ansible/roles/monitoring_server/templates/docker-compose.yml.j2
+++ b/ansible/roles/monitoring_server/templates/docker-compose.yml.j2
@@ -4,7 +4,7 @@ services:
     container_name: prometheus
     network_mode: host
     volumes:
-      - {{ monitoring_compose_dir }}/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - {{ monitoring_compose_dir }}/prometheus/provisioning/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - {{ prometheus_data_dir }}:/prometheus
     restart: unless-stopped
 
