--- a/ansible/roles/monitoring_server/templates/dashboards.yml.j2
+++ b/ansible/roles/monitoring_server/templates/dashboards.yml.j2
@@ -1,9 +1,9 @@
 apiVersion: 1
 
 providers:
-  - name: 'Node Exporter Dashboards'
+  - name: 'Monitoring Dashboards'
     orgId: 1
-    folder: 'Node Exporter'
+    folder: '{{ grafana_dashboard_folder }}'
     type: file
     disableDeletion: false
     editable: true
