--- a/ansible/roles/monitoring_server/templates/node-exporter-full.json.j2
+++ b/ansible/roles/monitoring_server/templates/node-exporter-full.json.j2
@@ -15752,7 +15752,7 @@
   },
   "timepicker": {},
   "timezone": "browser",
-  "title": "Node Exporter Full",
+  "title": "{{ grafana_node_exporter_dashboard_title }}",
   "uid": "rYdddlPWk",
   "version": 1
 }
